--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: lightblue;
+    background-color: #e2e8f0;
 }
 
 .sidebar{
@@ -11,11 +11,14 @@ img{
     width: 30px;
 }
 
+.header{
+  background-color: white;
+}
+
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: auto;
+    grid-template: 150px auto/ 300px auto;
     gap: 4px;
     text-align: center;
   }
@@ -23,17 +26,161 @@ img{
   .sidebar{
     height: 100vh;
     display: grid;
-    grid-row: 1/6;
-    background-color: black;
-    font-size: 4vh;
+    grid-column: 1/2;
+    background-color: #1992d4;
+    font-size: 30px;
+    padding: 30px;
+
   }
 
   .side-icons{
     margin-left: 1vw;
     display:flex;
     gap: 10px;
+    align-items: center;
   }
 
   svg{
     height:6vh;
+  }
+
+
+  .header{
+    grid-area: 1/2/1/3;
+    
+    display:grid;
+    padding: 10px;
+  }
+
+ .header-top{
+  display:flex;
+  justify-content: space-between;
+  padding-right: 30px;
+  padding-left:30px;
+  padding-top: 15px;
+  
+ }
+
+ .profile-container{
+  display:flex;
+  gap: 30px;
+  align-items: center;
+
+ }
+
+ .search-container{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  gap:20px
+ }
+
+ input{
+  height: 2vh;
+  width: 25vw;
+  border-radius: 10px;
+  background-color: #e2e8f0;
+  border: black;
+ }
+
+
+ .profile-picture-1{
+  width:40px;;
+  height:40px;;
+  
+ }
+ .bell-icon{
+  width:20px;
+ }
+
+ .user-name-1{
+  font-weight: bold;
+
+ }
+
+ .header-bottom{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 30px;
+  padding-left:30px;
+ }
+
+ .buttons{
+  display:flex;
+  gap: 35px;
+ }
+ .welcome-container{
+  display:flex;
+  align-items:center;
+  gap: 30px;
+ }
+
+ .profile-picture-2{
+  width:60px;
+  height:60px;
+  
+ }
+
+ button{
+  display: inline-block;
+  padding: 10px 30px;
+  font-weight: bold;
+
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #1992d4;
+  border: none;
+  border-radius: 15px;
+ }
+
+.content{
+  background-color: #e2e8f0;
+  border-color:black;
+  grid-column:2/3;
+  grid-row: 2/3;
+  height: 89vh;
+  grid-template-columns: 3fr 1fr;
+  padding: 30px;
+  display: grid;
+}
+.project-cards{
+  background-color: white;
+  width: 300px;
+  height: 300px;
+}
+.content-projects{
+  grid-column:1/2;
+  display:grid;
+  height: 100vh;
+}
+
+.projects-title{
+  grid-column: 1/2;
+  display:flex;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.news{
+  grid-column:2/3;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+
+.announcement-card {
+height: 400px;
+width: 200px;
+background-color:white;
+}
+
+
+.trending-card {
+  height: 400px;
+  width: 200px;
+  background-color:white;
   }
